Center and avoid overflowing of content container for iframes

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -10,6 +10,13 @@
         object-fit: contain;
         max-width: 100%;
     }
+
+		iframe {
+			max-width: 100%;
+			margin-left: auto;
+			margin-right: auto;
+			display: block;
+		}
 }
 
 /*Formatting for Arduino code*/
